# QT_OPENCV

./: .gitignore  CMakeLists.txt  README.md
OpencvUtil/: CmakeLists.txt
OpencvUtil/source/: OpenCVImageUtil.cpp  OpenCVImageUtil.h
QtGuiApp/: CMakeLists.txt
QtGuiApp/res/: config.ini
QtGuiApp/source/: GlobalConfig.cpp  GlobalConfig.h  MainWindow-UI.h  MainWindow.cpp  MainWindow.h  MyProgressDialog.h  MyQGraphicsView.cpp  MyQGraphicsView.h  MySocketClient-UI.h  MySocketClient.cpp  MySocketClient.h  MySocketServer-UI.h  MySocketServerDlg.cpp  MySocketServerDlg.h  MyStruct.h  MyTcpServer.cpp  MyTcpServer.h  MyThread.cpp  main.cpp  pch.h
ui/: MainWindow-UI.ui
